--- a/src/base_server/web/demo.html
+++ b/src/base_server/web/demo.html
@@ -15,7 +15,7 @@
   <br/>
 
   <div class="container">
-    <button class="link-button" onclick="window.location.href='http://123.214.186.213/grafana/'">
+    <button class="link-button" onclick="window.location.href='http://datadrift.re.kr/grafana/'">
         2. 데이터 드리프트 앱 </button>
 
         <!--
